# ai-agents-apps

./: README.md
RAG/local-ai-agent-RAG/: README.md  main.py  vector.py
basic-chatbot-langgraph/: README.md  pyproject.toml
custom-guardrails/: pyproject.toml
faiss-langchain/: main.py  pyproject.toml
guardrails/custom-guardrails/: main.py
guardrails/human-in-loop-langchain/: README.md  main.py  pyproject.toml
guardrails/pii-detection-langchain/: main.py  pyproject.toml
image_langchain/: README.md  main.py  pyproject.toml
langchain/agents/memory_tools_langchain/: main.py  pyproject.toml
langchain/agents/researcher-agent-langchain/: README.md  tools.py
langchain/agents/weather-tool-langchain/: pyproject.toml
langchain/retrieval/faiss-langchain/: README.md
langgraph/basic-chatbot-langgraph/: main.py
langgraph/multi-node-chatbot-langgraph/: main.py
langsmith-datasets/: README.md
langsmith/langsmith-datasets/: main.py  pyproject.toml
langsmith/langsmith-pynb/: README.md
langsmith/langsmith-pynb/notebooks/module_0/: rag_application.ipynb
langsmith/langsmith-pynb/notebooks/module_2/: app.py  (+2 more)
local-ai-agent-RAG/: README.md
multi-node-chatbot-langgraph/: README.md  pyproject.toml
researcher-agent-langchain/: README.md  main.py
stock_briefing_crewai/: README.md  pyproject.toml
stock_briefing_crewai/src/stock_briefing_crewai/: crew.py  main.py
stock_briefing_crewai/src/stock_briefing_crewai/config/: agents.yaml  tasks.yaml
stock_briefing_crewai/src/stock_briefing_crewai/tools/: custom_tool.py
weather-tool-langchain/: main.py
(+3 files in other folders)
