[project]
name = "stock_briefing_crewai"
version = "0.1.0"
description = "stock_briefing_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "yfinance>=1.3.0",
]

[project.scripts]
stock_briefing_crewai = "stock_briefing_crewai.main:run"
run_crew = "stock_briefing_crewai.main:run"
train = "stock_briefing_crewai.main:train"
replay = "stock_briefing_crewai.main:replay"
test = "stock_briefing_crewai.main:test"
run_with_trigger = "stock_briefing_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
